--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="grid_container">
         <nav class="menu" data-menu="smooth">
-            <ul>
-                
+            <button data-menu="button" aria-expanded="false" aria-controls="menu">Menu</button>
+            <ul data-menu="list" id="menu">
                 <li data-dropdown>
                     <a href="sobre.html">Sobre</a>
                     <ul class="dropdown-menu">
