add animates numbers

--- a/index.html
+++ b/index.html
@@ -133,6 +133,28 @@
             </dl>
         </section>
 
+        <section class="grid_section numbers" data-anime="scroll">
+            <h1 class="titulo">Números</h1>
+            <div class="numbers-grid">
+                <div class="number-animal">
+                    <h3>Occami</h3>
+                    <span data-number >90</span>
+                </div>
+                <div class="number-animal">
+                    <h3>Testrálio</h3>
+                    <span data-number >5967</span>
+                </div>
+                <div class="number-animal">
+                    <h3>Pelúcio </h3>
+                    <span data-number >4748</span>
+                </div>
+                <div class="number-animal">
+                    <h3>Seminviso </h3>
+                    <span data-number >300</span>
+                </div>
+            </div>
+        </section>
+
         <section id="contato" class="grid_section contato" data-anime="scroll">
             <h1 class="titulo">Contato</h1>
             <div class="mapa" data-tooltip aria-label="Endereço próximo ao salgueiro lutador">
