--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
                 <li>animais@fantasticos.com.br</li>
                 <li>+55 (81) 99999-9999</li>
                 <li>Rua Navegantes, N.255, Recife - PE</li>
+                <li data-week="1,2,3,4,5" data-schedule="9,19">Seg à Sex |  09:00 às 17:00</li>
             </ul>
         </section>
 
