add fetch bitcoin

--- a/index.html
+++ b/index.html
@@ -150,6 +150,10 @@
                 <li>animais@fantasticos.com.br</li>
                 <li>+55 (81) 99999-9999</li>
                 <li>Rua Navegantes, N.255, Recife - PE</li>
+                <li>
+                    Doe <span class="btc"></span> bitcoin para nos ajudar
+                    <img class="moeda" src="img/moeda.png" alt="moeda">
+                </li>
                 <li data-week="1,2,3,4,5" data-schedule="9,19">Seg à Sex |  09:00 às 17:00</li>
             </ul>
         </section>
