--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Animais Fantásticos</title>
+    <link rel="icon" href="img/icon-title.png">
     <script>document.documentElement.className += ' js' </script>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -132,6 +133,31 @@
                     felídeos.</dd>
             </dl>
         </section>
+
+
+        <section class="grid_section galery" data-anime="scroll">
+            <ul class="custom-controls">
+                <li><img class="custom-controls-okami" src="img/slide/okami.jpg" alt="" /></li>
+                <li><img src="img/slide/testralio.jpg" alt="" /></li>
+                <li><img src="img/slide/pelucio.jpg" alt="" /></li>
+                <li><img src="img/slide/seminviso.jpg" alt="" /></li>
+                <li><img src="img/slide/diabrete.jpg" alt="" /></li>
+                <li><img  class="b" src="img/imagem6.jpg" alt="" /></li>
+              </ul>
+        
+            <div class="slide-wrapper">
+              <ul class="slide">
+                <li><img src="img/slide/okami.jpg" alt="imagem okami" /></li>
+                <li><img src="img/slide/testralio.jpg" alt="imagem testralio" /></li>
+                <li><img src="img/slide/pelucio.jpg" alt="imagem pelucio" /></li>
+                <li><img src="img/slide/seminviso.jpg" alt="imagem seminviso" /></li>
+                <li><img src="img/slide/diabrete.jpg" alt="imagem diabrete" /></li>
+                <li><img src="img/slide/basilisco.jpg" alt="imagem basilisco" /></li>
+              </ul>
+            </div>
+        
+        </section>
+
 
         <section class="grid_section numbers" data-anime="scroll">
             <h1 class="titulo">Números</h1>
